Thu May 10 17:40:58 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          Another attempt at fixing the idl processing rules.

Wed May  9 19:19:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/String_TypeCode.cpp:
        * tao/BiDir_Adapter.h:
        * tao/BiDir_GIOP/BiDir_ORBInitializer.cpp:
        * tao/BiDir_GIOP/BiDirPolicy_Validator.cpp:
        * tao/PortableServer/Servant_Upcall.h:
        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp:
          Layout changes

Wed May  9 11:29:42 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          Fixed by adding the idl processing rules.

Tue May  8 11:25:53 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * configure.ac:
        * tests/IORManipulation/Makefile.am:
        * tests/IORManipulation/filter/Makefile.am:

          Added an automake makefile for the IORManip filter test.

Tue May  8 11:15:00 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tao/IORManipulation/IORManip_IIOP_Filter.h:
        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:

          Added missing checks for TAO_HAS_IIOP.

        * tao/Makefile.am:

          Added the new IORManip*Filter.{h,cpp} files.

Tue May  8 09:31:35 UTC 2007  Vadym Ridosh <vr@prismtech.com>

        * orbsvcs/tests/Bug_2377_Regression/Hello_Impl.cpp:
        * orbsvcs/tests/Bug_2377_Regression/uipmc_test.cpp:
          Changed number of client threads in the test from 1 to 32
          and made output a bit nicer.

Mon May  7 18:43:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Makefile.am:
          Added missing String_Const_Sequence_Element_T.h. Thanks to
          Thomas Lockhart <Thomas dot Lockhart at jpl dot nasa dot gov>
          for reporting this issue

Mon May  7 16:08:17 UTC 2007  Vadym Ridosh  <vr@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.h: